array.island.Island.scala.code
def length: Int = this match {
  case Nil => 0
  case x :: xs =>  xs.length
}


def island(num:Array[Int]): Int = {
  var l = length(num)
  var n = 0
  for (i <-0 to l-1){
    if(num(i+1)<num(i) || num(i+1)<num(i)){
      n = n +1
    }
  }
  return n
}